Bug 456025 - No remote keyboard input - implementation of RemoteDesktopPortal::NotifyKeyboardKeysym is missing/empty
Summary: No remote keyboard input - implementation of RemoteDesktopPortal::NotifyKeybo...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-master
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-27 10:42 UTC by Jonas Eymann
Modified: 2022-11-02 16:16 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas Eymann 2022-06-27 10:42:20 UTC
SUMMARY
***
After investigating, fixing and testing [an issue about the RemoteDesktopPortalDialog not appearing|https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/114], I found out that RemoteDesktopPortal::NotifyKeyboardKeysym is currently not implemented.

As a result, keyboard input is not possible in connections to a KDE Plasma system using TeamViewer (which has support for sharing Wayland sessions, [currently still experimental|https://community.teamviewer.com/English/discussion/122410/teamviewer-support-on-wayland-experimental-state]).

***


STEPS TO REPRODUCE
1. Install current TeamViewer on a system running KDE Plasma ([a version which includes above mentioned fix|https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/114])
2. Connect to the system when running a Wayland session, allow mouse and keyboard input
3. Attempt keyboard input from remote system

OBSERVED RESULT
Remote keyboard input is not possible


EXPECTED RESULT
Remote keyboard input should be possible


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro, KDE neon
(available in About System)
KDE Plasma Version: 5.24.5, 5.25.0

ADDITIONAL INFORMATION
Current implementation in [remotedesktop.cpp|https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/blob/master/src/remotedesktop.cpp] looks like this:
   void RemoteDesktopPortal::NotifyKeyboardKeysym(const QDBusObjectPath &session_handle, const QVariantMap &options, int keysym, uint state)
   {
       Q_UNUSED(session_handle)
       Q_UNUSED(options)
       Q_UNUSED(keysym)
       Q_UNUSED(state)
   }
Comment 1 Bug Janitor Service 2022-06-28 00:50:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2584
Comment 2 Bug Janitor Service 2022-07-06 16:17:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/118
Comment 3 Bug Janitor Service 2022-10-20 14:46:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/131
Comment 4 Aleix Pol 2022-11-02 16:16:53 UTC
Git commit 527d324bda4978114312f122e5804d4ca3bde95d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 02/11/2022 at 16:15.
Pushed by apol into branch 'master'.

RemoteDesktop: Add support for the keysym parts of the protocol

Locally convert keysyms into keycodes

M  +11   -0    CMakeLists.txt
M  +7    -0    src/CMakeLists.txt
M  +9    -3    src/remotedesktop.cpp
M  +158  -0    src/waylandintegration.cpp
M  +1    -0    src/waylandintegration.h
M  +1    -0    src/waylandintegration_p.h

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/527d324bda4978114312f122e5804d4ca3bde95d