RemoteDesktop: Add support for the keysym parts of the protocol

Locally convert keysyms into keycodes

BUG: 456025